fixed navbar problem on small viewport

--- a/index.css
+++ b/index.css
@@ -1,90 +1,91 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 h1 {
-    font-family: 'Crimson Text', serif;
-    text-transform: uppercase;
-    color: white;
+  font-family: "Crimson Text", serif;
+  text-transform: uppercase;
+  color: white;
 }
 
 h2 {
-    font-family: 'Playfair Display', serif;
-    font-size: 2em;
-    color: yellow;
+  font-family: "Playfair Display", serif;
+  font-size: 2em;
+  color: yellow;
 }
 
 h3 {
-    font-family: 'Vollkorn', serif;
-    color: white;
+  font-family: "Vollkorn", serif;
+  color: white;
 }
 
 h4 {
-    font-family: 'Lora', serif;
-    color: white;
+  font-family: "Lora", serif;
+  color: white;
 }
 
 body {
-    background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    display: block;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+  display: block;
 }
 
-footer{
-    text-align: center;
+footer {
+  text-align: center;
 }
 
-
-
-
-
-.navbar{
+.navbar {
     font-size: 20px;
-}
-
-#navbar {
-    font-family: 'Playfair Display', serif;
+  }
+  
+  #navbar {
+    font-family: "Playfair Display", serif;
     background: #292826;
-}
-
-#index-brand{
+  }
+  
+  #index-brand {
     color: white;
-    font-family: 'Sonsie One', cursive;
-    width: 100%;}
-
-.collapse .nav-link{
+    font-family: "Sonsie One", cursive;
+    width: 74%;
+  }
+  
+  #navbarNav .nav-item{
     color: white;
     font-weight: bold;
     font-family: georgia;
-}
-
-.nav-link:hover,
-.nav-link:focus{
+    margin: 0 0.5rem 0;
+  }
+  
+  .nav-link:hover,
+  .nav-link:focus {
     background-color: #18aae4;
     border-radius: 0.5em;
-}
-
-
-
-
-.drop {
-    color: #2980B9;
+  }
+  
+  .drop {
+    color: #2980b9;
     cursor: pointer;
-    transition: 0.5s;
-}
-
-.dropdown {
+    transition: all 0.5s;
+  }
+  
+  .dropdown {
     position: relative;
     display: inline-block;
-
-    color: #2980B9;
+  
+    color: #2980b9;
     cursor: pointer;
     transition: 0.5s;
-}
-
-.dropdown-content {
+  }
+  
+  .dropdown-content {
     display: none;
     position: absolute;
     background-color: rgba(137, 234, 247, 0.863);
@@ -92,219 +93,186 @@ footer{
     border-radius: 0.5em;
     padding: 5px;
     z-index: 1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     transition: 0.5s;
-}
-
-.dropdown-content a {
+  }
+  
+  .dropdown-content a {
     color: black;
     text-decoration: none;
     display: block;
-}
-
-.dropdown-content a:hover,
-.dropdown-content a:focus{
+  }
+  
+  .dropdown-content a:hover,
+  .dropdown-content a:focus {
     background-color: #ddd;
-}
-
-
-
+  }
 
 .scrolling-top {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/background/pc-conf.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(images/background/pc-conf.jpeg);
 
-    height: 698px;
-    top: 0;
-    left: 0;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  height: 698px;
+  top: 0;
+  left: 0;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .welcome {
-    font-size: 78px;
-    color: yellow;
+  font-size: 3rem;
+  color: yellow;
 
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* border: 2px red solid; */
 }
 
-
-.section-intro{
-    padding-top: 50px;
-    max-width: 1000px;
-    float: center;
+.section-intro {
+  padding-top: 50px;
+  max-width: 1000px;
+  float: center;
 }
 
-
-
-
-.section-edu{
-    text-align: center;
+.section-edu {
+  text-align: center;
 }
 
-.section-edu h1{
-    text-transform: uppercase;
+.section-edu h1 {
+  text-transform: uppercase;
 }
 
-.edu-logo{
-    height: 240px;
-    width: auto;
-    border-radius: 80px;
+.edu-logo {
+  height: 240px;
+  width: auto;
+  border-radius: 80px;
 }
 
 .section-edu .column:hover,
-.section-edu .column:focus{
-    box-shadow: 0 64px 64px 0 rgba(0, 0, 0, 0.5);
-    transition: all 1s;
-    border-radius: 18px;
+.section-edu .column:focus {
+  box-shadow: 0 64px 64px 0 rgba(0, 0, 0, 0.5);
+  transition: all 1s;
+  border-radius: 18px;
 }
 
-.column{
-    padding-top: 20px;
-    width: 100%; 
-
+.column {
+  padding-top: 20px;
+  width: 100%;
 }
 
-.row{
-    width: 100%;
+.row {
+  width: 100%;
 }
-
 
 .section-skills {
-    padding-top: 50px;
-    padding-left: 50px;
+  padding-top: 50px;
+  padding-left: 50px;
 }
 
 ul {
-    color: white;
+  color: white;
 }
 
-
 .section-skills .column:hover,
-.section-skills .column:focus{
-    box-shadow: 0 64px 64px 0 rgba(0, 0, 0, 0.5);
-    border-radius: 18px;
-    transition: all 1s;
+.section-skills .column:focus {
+  box-shadow: 0 64px 64px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 18px;
+  transition: all 1s;
 }
 
 .skills-list,
 .lang-list,
 .frame-tools-list {
-    font-family: 'Playfair Display', serif;
-    padding-left: 20px;
-    color: white;
+  font-family: "Playfair Display", serif;
+  padding-left: 20px;
+  color: white;
 }
 
-
-
-
-
-.section-projects{
+.section-projects {
 }
 
-
-
-
-
-.section-courses{
-    
+.section-courses {
 }
 
-
-
-
-
-.section-achiev{
-    padding-bottom: 70px;
+.section-achiev {
+  padding-bottom: 70px;
 }
-
-
 
 .section-projects,
 .section-courses,
-.section-achiev{
-    max-width: 1000px;
-    float: center;
+.section-achiev {
+  max-width: 1000px;
+  float: center;
 }
-
 
 .section-edu,
 .section-skills,
 .section-projects,
 .section-courses,
-.section-achiev{
-    padding-top: 70px;
-    padding-left: 50px;
+.section-achiev {
+  padding-top: 70px;
+  padding-left: 50px;
 }
 
-
-
 #more {
-    display: none;
+  display: none;
 }
 
 #btn,
 #btn-cert,
 #moreLed {
-    color: white;
+  color: white;
 }
 
 .certificates {
-    padding-top: 5em;
+  padding-top: 5em;
 }
 
 .thumbnail {
-    margin: 2em 0em 0em 0em;
+  margin: 2em 0em 0em 0em;
 }
 
 .thumbnail:hover {
-    box-shadow: 0 64px 64px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 64px 64px 0 rgba(0, 0, 0, 0.5);
 }
 
 #intro {
-    text-align: center;
+  text-align: center;
 }
 
 #lang-list,
 #skills-list {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 #lang-list {
-    padding-bottom: 40px;
+  padding-bottom: 40px;
 }
 
+.footer {
+  background-color: #101820ff;
+  min-height: 16px;
+  padding-bottom: 20px;
 
-
-
-
-.footer{
-    background-color: #101820FF;
-    min-height: 16px;
-    padding-bottom: 20px;
-
-    text-align: center;
+  text-align: center;
 }
 
-.footer-icon{
+.footer-icon {
+  padding-left: 20px;
+}
+
+@media only screen and (max-width: 700px) {
+  .section-edu,
+  .section-skills,
+  .section-projects,
+  .section-courses,
+  .section-achiev {
+    padding-top: 70px;
     padding-left: 20px;
-}
-
-
-
-
-@media only screen and (max-width: 700px){
-    .section-edu,
-    .section-skills,
-    .section-projects,
-    .section-courses,
-    .section-achiev{
-        padding-top: 70px;
-        padding-left: 20px;
-    }
+  }
 }
